# substrate-recipies

./: Cargo.toml  Containerfile  README.md
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: release.yml
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/basic-token/: Cargo.toml
pallets/basic-token/src/: lib.rs  mock.rs  tests.rs
pallets/charity/: Cargo.toml
pallets/charity/src/: lib.rs  mock.rs  tests.rs
pallets/compounding-interest/: Cargo.toml
pallets/compounding-interest/src/: lib.rs  mock.rs  tests.rs
pallets/constants-config/: Cargo.toml
pallets/constants-config/src/: lib.rs  mock.rs  tests.rs
pallets/default-instance/: Cargo.toml
pallets/double-map/: Cargo.toml
pallets/double-map/src/: lib.rs  mock.rs  tests.rs
pallets/fixed-point/: Cargo.toml
pallets/fixed-point/src/: lib.rs  mock.rs  tests.rs
pallets/last-caller/: Cargo.toml
pallets/last-caller/src/: lib.rs
pallets/map-set/: Cargo.toml
pallets/map-set/src/: lib.rs  mock.rs  tests.rs
pallets/ringbuffer-queue/: Cargo.toml
pallets/ringbuffer-queue/src/: lib.rs  mock.rs  ringbuffer.rs  tests.rs
pallets/simple-crowdfund/: Cargo.toml
pallets/simple-crowdfund/src/: lib.rs  mock.rs  tests.rs
pallets/storage-cache/: Cargo.toml
pallets/storage-cache/src/: lib.rs  mock.rs  tests.rs
pallets/struct-storage/: Cargo.toml
pallets/struct-storage/src/: lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
pallets/template/src/: weights.rs
pallets/vec-set/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
traits/account-set/: Cargo.toml
traits/account-set/src/: lib.rs
(+3 files in other folders)
