[workspace]
members = [
    "node", "pallets/basic-token", "pallets/double-map", "pallets/map-set", "pallets/ringbuffer-queue", 
    "pallets/storage-cache", "pallets/struct-storage",
    "pallets/template", "pallets/vec-set",
    "runtime", "traits/account-set",
]
[profile.release]
panic = "unwind"
