[workspace]
members = [
    "node", "pallets/basic-token", "pallets/constants-config", "pallets/default-instance", "pallets/double-map", "pallets/last-caller", "pallets/map-set", "pallets/ringbuffer-queue", "pallets/simple-crowdfund", 
    "pallets/storage-cache", "pallets/struct-storage",
    "pallets/template", "pallets/vec-set",
    "runtime", "traits/account-set",
]
[profile.release]
panic = "unwind"
